<resources>
    <string name="app_name">1+健康(大众版)</string>
    <!--主页面-->
    <string name="tab_one">资讯</string>
    <string name="tab_two">科普讲座</string>
    <string name="tab_three">我的健康</string>
    <string name="tab_four">特需</string>
    <string name="date_string">%1$s年%2$s月%3$s日 %4$s</string>
    <string name="date_format">%1$s-%2$s-%3$s</string>

    <!--登录界面-->
    <string name="hint_username">请输入帐号</string>
    <string name="hint_password">请输入密码</string>
    <string name="label_auto_login">自动登录</string>
    <string name="label_fast_login">快速登录</string>
    <string name="label_wechat_login">微信</string>
    <string name="label_sina_login">微博</string>
    <string name="label_qq_login">QQ</string>
    <string name="btn_login">登&#160;&#160;录</string>
    <string name="btn_register"><Data><![CDATA[<u>注册帐号</u>]]></Data></string>
    <!--注册页面-->
    <string name="label_username">用&#160;&#160;户&#160;&#160;名:</string>
    <string name="label_password">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    <string name="label_confirm_password">确认密码:</string>
    <string name="hint_confirm_password">请再次输入</string>
    <string name="label_champs">擅长领域:</string>
    <string name="hint_champs">请选择您的擅长领域</string>
    <string name="label_declare"><Data><![CDATA[<u>免责声明</u>]]></Data></string>
    <string name="label_reading">已阅</string>
    <string name="btn_confirm_register">确认注册</string>
    <string name="label_has_username">已有帐号?</string>
    <string name="label_back_login"><Data><![CDATA[<u>返回登录</u>]]></Data></string>
    <!--修改密码-->
    <string name="title_chage_password">修改密码</string>
    <string name="label_old_password">密&#160;&#160;&#160;&#160;码</string>
    <string name="label_new_password">新密码</string>
    <string name="label_confirm_new_password">确认密码</string>
    <!--标题-->
    <string name="title_home_news">%1$s</string>
    <string name="title_home_view">%1$s</string>
    <string name="title_home_tong">我的健康</string>
    <string name="title_home_concur">特需</string>
    <!--资讯界面-->
    <string name="title_share">医家要闻</string>
    <string name="label_educate_name">教育</string>
    <string name="label_important_news_name">要闻</string>
    <string name="label_meeting_name">会议</string>
    <string name="title_office_choice">请选择科室</string>
    <string name="label_office_tumour">肿瘤科</string>
    <string name="label_office_tumour_short">肿瘤</string>
    <string name="label_office_heart">心血管科</string>
    <string name="label_office_endocrine">其它科</string>
    <string name="label_read_count">阅读数:%1$s</string>
    <string name="title_comment">评论</string>
    <string name="hint_write_comment">写评论</string>
    <string name="label_domain">领域</string>
    <!--科普讲座界面-->
    <string name="title_view_detail">科普讲座</string>
    <string name="label_famous_hospital_name">名医医院</string>
    <string name="label_profession_name">专业视频</string>
    <string name="label_public_class_name">医学公开课</string>
    <string name="label_brief_introduce">本期简介</string>
    <string name="label_question">医友评论</string>
    <string name="btn_send_message">发送</string>
    <string name="label_question_up">顶(%1$s)</string>
    <!--我的健康界面-->
    <string name="label_expert_online_name">专家在线</string>
    <string name="label_famous_list_name">往期回顾</string>
    <string name="title_famous_list">我的健康</string>
    <string name="string_expert_ask">Q:&#160;&#160;%1$s</string>
    <string name="string_expert_answer">A:&#160;&#160;%1$s</string>
    <string name="btn_publish">发表</string>
    <string name="btn_auth_now">立即认证</string>
    <string name="label_online_ing">直播中</string>
    <string name="dialog_send_success">发送成功，我们正在积极回答，回答后可刷新列表查看</string>
    <!--特需界面-->
    <string name="label_medical_assistance_name">医疗援助</string>
    <string name="label_scientific_in_name">科研参与</string>
    <string name="title_patient_information">病例详情</string>
    <string name="title_fill_information">填写信息</string>
    <string name="title_scientific_introduce">科研介绍</string>
    <string name="label_patient_information">患者信息</string>
    <string name="label_base_information">基本信息</string>
    <string name="hint_base_information">输入填写描述信息</string>
    <string name="label_patients_information">病患信息</string>
    <string name="label_diagnose">诊断</string>
    <string name="label_diagnose_first">第一诊断</string>
    <string name="label_diagnose_second">第二诊断</string>
    <string name="label_patient_condition">病情信息</string>
    <string name="label_patient_base">基本病情</string>
    <string name="label_patient_course">患者病情</string>
    <string name="title_mine_help">求助历史</string>
    <string name="label_wait_help">等待应助</string>
    <string name="label_wait_history">历史应助</string>
    <string name="title_launch_recruit">发起招募</string>
    <string name="label_discuss_background">·研究背景</string>
    <string name="label_discuss_require">·参与要求</string>
    <string name="title_organization_introduce">机构介绍</string>
    <string name="btn_ask_help">求助</string>
    <string name="error_zip_error">压缩异常请重试</string>
    <string name="empty_zip_error">请上传图片信息</string>
    <string name="btn_join">参与</string>
    <string name="title_right_recommend">历史</string>
    <string name="title_right_history">历史</string>
    <string name="title_right_start">发起</string>
    <string name="dialog_title_join">确认参与？</string>
    <string name="dialog_btn_join">立即参与</string>
    <string name="dialog_btn_notjoin">暂不参与</string>
    <string name="dialog_recommend_success">了解成功，我们会尽快和您取得联系</string>
    <string name="dialog_message_join">点击确认我们将会发送您的信息至该项目,审核后会与您取得联系</string>
    <string name="dialog_saverequest_success">发送成功，我们正在积极审核中,可去历史中查看审核进度</string>
    <string name="dialog_recruit_success">发起成功,我们正在审核,审核通过后将在列表中显示</string>
    <!--认证界面-->
    <string name="title_authentication">认证</string>
    <string name="label_authentication_name">姓名:</string>
    <string name="hint_authentication_name">请输入您的姓名</string>
    <string name="label_authentication_hospital">医院:</string>
    <string name="hint_authentication_hospital">请输入您所在的医院</string>
    <string name="label_authentication_office">科室:</string>
    <string name="label_authentication_title">职称:</string>
    <string name="label_authentication_phone">手机号:</string>
    <string name="hint_authentication_phone">请输入手机号</string>
    <string name="label_authentication_phone_code">验证码:</string>
    <string name="hint_authentication_phone_code">请输入验证码</string>
    <string name="btn_authentication_get_phone_code">获取验证码</string>
    <string name="btn_authentication_new_phone_code">重新获取(%1$s)</string>
    <string name="label_authentication_credentials">职业医师证书:</string>
    <!--个人信息界面-->
    <string name="title_mine">个人中心</string>
    <string name="label_nickname">帐号</string>
    <string name="hint_nickname">请输入您的帐号</string>
    <string name="label_field">擅长领域</string>
    <string name="label_name">姓名</string>
    <string name="hint_name">请输入您的姓名</string>
    <string name="label_hospital">医院</string>
    <string name="hint_hospital">请输入您所在的医院</string>
    <string name="label_office">科室</string>
    <string name="hint_office">请输入科室</string>
    <string name="label_title">职称</string>
    <string name="hint_title">请选择职称</string>
    <string name="label_phone">手机号</string>
    <string name="hint_phone">请输入有效手机号</string>
    <string name="label_change_password">修改密码</string>
    <string name="title_right_logout">退出登录</string>
    <string name="lable_auth">已认证</string>
    <string name="lable_unauth">未认证</string>
    <!--提示信息-->
    <string name="test_string">测试字符串</string>
    <string name="toast_username_empty">请输入帐号</string>
    <string name="toast_password_empty">请输入密码</string>
    <string name="toast_newpassword_empty">请输入新密码</string>
    <string name="toast_password_chiness">密码不能为中文</string>
    <string name="toast_password_confirm">两次密码不一致</string>
    <string name="toast_domain_empty">请选择擅长领域</string>
    <string name="toast_agree_protocol">请阅读协议</string>
    <string name="toast_question_empty">请输入评论内容</string>
    <string name="toast_commit_success">提交成功</string>
    <string name="toast_img_file">未获取图片,请重新上传</string>
    <string name="toast_comment_success">评论成功</string>
    <string name="toast_comment_empty">评论内容不能为空</string>
    <string name="title_genetic_detection">基因检测</string>
    <string name="btn_recommend">了解</string>
    <string name="hint_base_type">请选择需要受试者类型</string>
    <string name="hint_choice_sex">请选择性别</string>
    <string name="hint_choice_marriage">请选择婚姻状况</string>
    <string name="hint_choice_texttype">请选择试验分类</string>
    <string name="toast_input_true_age">请输入有效年龄</string>
    <string name="title_geneti_history">了解历史</string>
    <string name="toast_img_error">图片信息错误,请重试</string>
    <string name="toast_show_success">保存成功</string>
    <string name="notice_data_empty">暂无数据</string>
</resources>
