<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_background_color"
              android:orientation="vertical">

    <com.zero.library.base.view.TitleBarView
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                style="@style/text_normal"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:padding="@dimen/dimen_10"
                android:text="@string/test_string"
                android:textSize="@dimen/dimen_16"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_base_info"
                style="@style/edittext_normal"
                android:layout_margin="@dimen/dimen_5"
                android:background="@drawable/bg_edittext_line_4"
                android:hint="@string/hint_base_information"
                android:maxLines="5"
                android:minLines="3"
                android:padding="@dimen/dimen_10"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    style="@style/label_normal"
                    android:text="@string/label_patient_information"/>

                <include layout="@layout/include_line_simple"/>

                <TextView
                    android:id="@+id/tv_base_information"
                    style="@style/text_normal"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/ic_default_right"
                    android:gravity="start"
                    android:paddingBottom="@dimen/dimen_8"
                    android:paddingLeft="@dimen/dimen_15"
                    android:paddingRight="@dimen/dimen_20"
                    android:paddingTop="@dimen/dimen_8"
                    android:text="@string/label_base_information"
                    android:textColor="@color/bg_text_lable"/>

                <LinearLayout
                    android:id="@+id/ll_base_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

                <include layout="@layout/include_line_simple"/>

                <TextView
                    android:id="@+id/tv_patients_information"
                    style="@style/text_normal"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/ic_default_right"
                    android:gravity="start"
                    android:paddingBottom="@dimen/dimen_8"
                    android:paddingLeft="@dimen/dimen_15"
                    android:paddingRight="@dimen/dimen_20"
                    android:paddingTop="@dimen/dimen_8"
                    android:text="@string/label_patients_information"
                    android:textColor="@color/bg_text_lable"/>


                <LinearLayout
                    android:id="@+id/ll_information_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    style="@style/label_normal"
                    android:text="@string/label_diagnose"/>

                <include layout="@layout/include_line_simple"/>

                <TextView
                    android:id="@+id/tv_first"
                    style="@style/text_normal"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/ic_default_right"
                    android:gravity="start"
                    android:paddingBottom="@dimen/dimen_8"
                    android:paddingLeft="@dimen/dimen_15"
                    android:paddingRight="@dimen/dimen_20"
                    android:paddingTop="@dimen/dimen_8"
                    android:text="@string/label_diagnose_first"
                    android:textColor="@color/bg_text_lable"/>

                <LinearLayout
                    android:id="@+id/ll_first_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>


                <include layout="@layout/include_line_simple"/>

                <TextView
                    android:id="@+id/tv_second"
                    style="@style/text_normal"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/ic_default_right"
                    android:gravity="start"
                    android:paddingBottom="@dimen/dimen_8"
                    android:paddingLeft="@dimen/dimen_15"
                    android:paddingRight="@dimen/dimen_20"
                    android:paddingTop="@dimen/dimen_8"
                    android:text="@string/label_diagnose_second"
                    android:textColor="@color/bg_text_lable"/>


                <LinearLayout
                    android:id="@+id/ll_second_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    style="@style/label_normal"
                    android:text="@string/label_patient_condition"/>

                <include layout="@layout/include_line_simple"/>

                <TextView
                    android:id="@+id/tv_patientbase"
                    style="@style/text_normal"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/ic_default_right"
                    android:gravity="start"
                    android:paddingBottom="@dimen/dimen_8"
                    android:paddingLeft="@dimen/dimen_15"
                    android:paddingRight="@dimen/dimen_20"
                    android:paddingTop="@dimen/dimen_8"
                    android:text="@string/label_patient_base"
                    android:textColor="@color/bg_text_lable"/>

                <LinearLayout
                    android:id="@+id/ll_patientbase_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>

                <include layout="@layout/include_line_simple"/>

                <TextView
                    android:id="@+id/tv_patientcourse"
                    style="@style/text_normal"
                    android:layout_width="match_parent"
                    android:drawableRight="@drawable/ic_default_right"
                    android:gravity="start"
                    android:paddingBottom="@dimen/dimen_8"
                    android:paddingLeft="@dimen/dimen_15"
                    android:paddingRight="@dimen/dimen_20"
                    android:paddingTop="@dimen/dimen_8"
                    android:text="@string/label_patient_course"
                    android:textColor="@color/bg_text_lable"/>

                <LinearLayout
                    android:id="@+id/ll_patientcourse_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"/>
            </LinearLayout>


            <TextView
                android:id="@+id/tv_commit"
                style="@style/btn_normal_largesize"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@drawable/bg_btn_normal"
                android:text="@string/commit"
                android:textColor="@color/white"/>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="horizontal"/>
</LinearLayout>