<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/app_background_color"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_30"
            android:paddingRight="@dimen/dimen_30"
            android:paddingTop="@dimen/dimen_40">

            <ImageView
                android:layout_width="@dimen/dimen_120"
                android:layout_height="@dimen/dimen_120"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/dimen_10"
                android:src="@drawable/ic_login"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_left_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_username_left"/>

                <EditText
                    android:id="@+id/et_login_username"
                    style="@style/edittext_normal_padding"
                    android:layout_toRightOf="@+id/ic_left_username"
                    android:hint="@string/hint_username"
                    android:singleLine="true"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/et_login_username"
                    android:layout_alignLeft="@+id/et_login_username"
                    android:background="@drawable/bg_line_simple"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ic_left_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_password_left"/>

                <EditText
                    android:id="@+id/et_login_password"
                    style="@style/edittext_normal_padding"
                    android:layout_toRightOf="@id/ic_left_password"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:singleLine="true"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/et_login_password"
                    android:layout_alignLeft="@+id/et_login_password"
                    android:background="@drawable/bg_line_simple"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/btn_login"
                style="@style/btn_normal_largesize"
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/dimen_10"
                android:layout_marginTop="@dimen/dimen_20"
                android:background="@drawable/bg_btn_normal"
                android:text="@string/btn_login"
                android:textColor="@color/white"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_auto_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="false"
                    android:drawableLeft="@drawable/selector_check_box_blue"
                    android:drawablePadding="@dimen/dimen_5"
                    android:paddingBottom="@dimen/dimen_5"
                    android:paddingLeft="@dimen/dimen_3"
                    android:paddingRight="@dimen/dimen_10"
                    android:paddingTop="@dimen/dimen_5"
                    android:text="@string/label_auto_login"
                    android:textColor="@color/bg_text_lable"
                    android:textSize="@dimen/text_14"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_1"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/btn_regist"
                    style="@style/text_color_normal"
                    android:text="@string/btn_register"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_30"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/et_login_password"
                    android:layout_alignLeft="@+id/et_login_password"
                    android:layout_weight="1"
                    android:background="@drawable/bg_line_regist"/>

                <TextView
                    style="@style/text_normal"
                    android:paddingLeft="@dimen/dimen_10"
                    android:paddingRight="@dimen/dimen_10"
                    android:text="@string/label_fast_login"
                    android:textColor="@color/bg_text_lable"
                    android:textSize="@dimen/text_14"/>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/et_login_password"
                    android:layout_alignLeft="@+id/et_login_password"
                    android:layout_weight="1"
                    android:background="@drawable/bg_line_regist"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_auth_wechat"
                    style="@style/text_padding_normal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_wechat_login"
                    android:text="@string/label_wechat_login"
                    android:textColor="@color/bg_text_lable"
                    android:textSize="@dimen/text_13"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/btn_auth_sina"
                    style="@style/text_padding_normal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_sina_login"
                    android:text="@string/label_sina_login"
                    android:textColor="@color/bg_text_lable"
                    android:textSize="@dimen/text_13"/>

                <TextView
                    android:id="@+id/btn_auth_qq"
                    style="@style/text_padding_normal"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_qq_login"
                    android:text="@string/label_qq_login"
                    android:textColor="@color/bg_text_lable"
                    android:textSize="@dimen/text_13"
                    android:visibility="gone"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>